--- a/resume.html
+++ b/resume.html
@@ -255,8 +255,8 @@
 </div>
 <div id="mRight">
     <div id="card">
-        <img class="card face" src="me-1.jpg" alt="什么！头像加载不出来了！！">
-        <img class="card back" src="wx.jpg" alt="What？备用图也加载不出来了！！">
+        <img class="card face" src="https://blackcarbo.github.io/Resume/me-1.jpg" alt="什么！头像加载不出来了！！">
+        <img class="card back" src="https://blackcarbo.github.io/Resume/wx.jpg" alt="What？备用图也加载不出来了！！">
     </div>
     <div class="Info basic">
         <ul>
