--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,6 @@
             color: #7f7f7f;
         }
         body{
-            /*position: absolute;*/
             margin: 20px auto;
             width: 880px;
             border: 1px solid grey;
@@ -27,22 +26,16 @@
         }
 
         #mLeft,#mRight{
-            /*position: relative;*/
-            /*float: left;*/
-            /*border-style: solid;*/
             display: inline-block;
-            vertical-align: top;  /*设置顶部对齐*/
+            vertical-align: top;
             margin: 10px 5px;
         }
         #mLeft{
             width: 560px;
             margin-left: 20px;
-            /*border-color: #00FFFF;*/
         }
         #mRight{
             width: 250px;
-            /*height: 1111px;*/
-            /*border-color: #FFFF00;*/
             padding-left: 10px;
             background-color: #ecedef;
         }
@@ -58,7 +51,6 @@
         b{
             font-weight: 600;
             color: #7f7f7f;
-
         }
         .card{
             position: absolute;
@@ -249,7 +241,7 @@
             <p>本人为人诚恳、乐观向上，富有团队精神和竞争意识，拥有较强的组织能力和适应能力；
                 有较强的学习能力和执行力，积极参加院校各种活动；对新鲜事物保持好奇心，并且热衷思考与创新。
                 本人有良好的编程素养，熟悉图像处理方面知识算法。目前正在学习Web前端开发相关技术框架，
-                并将写的demo发布在个人GitHub上，对学习实践Web前端技术抱有强烈的热情。</p>
+                并将写的demo发布在个人<a href="https://github.com/BlackCarbo">GitHub</a>上，对学习实践Web前端技术抱有强烈的热情。</p>
         </div>
     </div>
 </div>
