--- a/resume.html
+++ b/resume.html
@@ -193,7 +193,7 @@
     <div class="Info intention">
         <h2 class="mType">求职意向</h2>
         <div>
-            <p><b>应聘职位：</b>Web前端工程狮&nbsp;&nbsp;&nbsp;<b>工作地点：</b>浙江 杭州</p>
+            <p><b>应聘职位：</b>Web前端工程师（实习）&nbsp;&nbsp;&nbsp;<b>工作地点：</b>浙江 杭州</p>
         </div>
     </div>
     <div class="Info education">
