--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>myresume</title>
+    <meta name="author" content="BlackCarbo">
+    <!--https://blackcarbo.github.io/Resume/resume.html-->
+    <title>myResume</title>
     <style>
         *{
             font-family: "Microsoft YaHei UI", sans-serif;
@@ -108,6 +110,7 @@
         }
         #mycube{
             perspective: 400px;
+            margin-top:40px
         }
         #cube{
             transform-style: preserve-3d;
@@ -216,9 +219,10 @@
                 熟悉页面架构和布局，对表现与数据分离、Web语义化等有深刻理解。</p>
             <p>了解Bootstrap、JQuery等常用框架，了解Ajax运作机制，
                 对前端工程化与模块化开发有一定了解，有编码规范化意识。</p>
-            <p>熟悉java/python/C++开发等后台技术，对OOP思想有较深的理解并能熟练使用， 熟悉MVC、MVVM设计模式。</p>
+            <p>熟悉java/python/C++开发等后台技术，对OOP思想有较深的理解并能熟练使用，熟悉MVC、MVVM设计模式。</p>
+            <p>熟悉MySQL、SQL Server数据库，掌握SQL语句书写。</p>
             <p>有一定算法基础，了解图像处理算法，能使用OpenCV库进行图像处理，
-                了解机器学习思想以及相关算法（如SVM、 K-最近邻算法、神经网络等）。</p>
+                了解机器学习思想以及相关算法（如SVM、K-最近邻算法、神经网络等）。</p>
             <p>了解计算机网络通信方面知识原理。</p>
         </div>
     </div>
