--- a/resume.html
+++ b/resume.html
@@ -292,6 +292,7 @@
     </div>
     <div class="Info basic">
         <ul>
+            <li>姓名：赵志成</li>
             <li>生日：1993.06</li>
             <li>地址：浙江 杭州</li>
             <li>号码：159-5810-5948</li>
