--- a/resume.html
+++ b/resume.html
@@ -245,7 +245,7 @@
     <div class="Info projects">
         <h2 class="mType">科研项目</h2>
         <div>
-            <p class="minTitle"><b>科比职业生涯投篮选择预测</b></p>
+            <p class="minTitle"><a href="https://github.com/BlackCarbo/Kobe-Bryant-Shot-Selection" ><b>科比职业生涯投篮选择预测</b></a></p>
             <p>由于科研需要用到机器学习方法，所以自学了一下，在网上找了一些数据集，练习了一下机器学习方法。</p>
             <ul>
                 <li>在Ubuntu系统下通过Anaconda搭建python开发环境。</li>
