--- a/resume.html
+++ b/resume.html
@@ -236,23 +236,22 @@
             <p>->了解Bootstrap、JQuery等常用框架，了解Ajax运作机制，
                 对前端工程化与模块化开发有一定了解，有编码规范化意识。</p>
             <p>->熟悉java/python/C++开发等后台技术，对OOP思想有较深的理解并能熟练使用，熟悉MVC、MVVM设计模式。</p>
-            <p>->熟悉MySQL、SQL Server数据库，掌握SQL语句书写。</p>
-            <p>->有一定算法基础，了解图像处理算法，能使用OpenCV库进行图像处理，
-                了解机器学习思想以及相关算法（如SVM、K-最近邻算法、神经网络等）。</p>
+            <p>->了解MySQL、SQL Server数据库，掌握SQL语句书写。</p>
+            <p>->有一定算法基础，了解图像处理算法，能使用OpenCV库进行图像处理。</p>
             <p>->了解计算机网络通信方面知识原理。</p>
         </div>
     </div>
     <div class="Info projects">
         <h2 class="mType">科研项目</h2>
         <div>
-            <p class="minTitle"><a href="https://github.com/BlackCarbo/Kobe-Bryant-Shot-Selection" ><b>科比职业生涯投篮选择预测</b></a></p>
-            <p>由于科研需要用到机器学习方法，所以自学了一下，在网上找了一些数据集，练习了一下机器学习方法。</p>
+            <p class="minTitle"><b>简单数据报表定制页面</b></p>
+            <p>该项目为百度前端技术学院的一个课程作业，整个任务可以大致分为几个模块：路由模块，表单模块，数据处理模块，表格模块，图表模块。</p>
             <ul>
-                <li>在Ubuntu系统下通过Anaconda搭建python开发环境。</li>
-                <li>对科比职业生涯投篮数据集进行整理，预先去除一些无关特征、冗余特征。</li>
-                <li>使用tensorflow框架搭建神经网络模型，反复调整神经网络结构、激活函数与学习率，进行训练与测试。</li>
-                <li>使用 scikit-learn模块中的决策树模型、随机森林模型、AdaBoostClassifier、GradientBoostingClassifier等模型进行训练与测试。    </li>
-                <li>最终对科比生涯投篮选择预测的准确率达到 86%以上。</li>
+                <li>根据设计，通过HTML编写结合CSS实现基本页面结构布局。</li>
+                <li>编写动态生成表格以及柱状图和折线图的JS函数代码。</li>
+                <li>编写用户输入事件与逻辑，根据用户选择可刷新表单信息并以表格和图表形式展现数据。</li>
+                <li>加入表格内容修改与检查功能，若输入不是有效的数字数据则还原修改前数据。</li>
+                <li>使用localStorage实现将表单数据保存在本地，预先加载使用本地表单数据，以及删除本地相关表单数据功能。</li>
             </ul>
         </div>
         <div>
@@ -266,14 +265,16 @@
             </ul>
         </div>
         <div>
-            <p class="minTitle"><b>基于混沌理论的音乐信号非线性特征研究</b></p>
-            <p>该研究为研究生期间主要科研课题，课题基于音乐信号是时滞非线性动力学系统这一特点， 通过非线性分析手段来验证音乐的非线性特性。</p>
+            <p class="minTitle"><a href="https://github.com/BlackCarbo/Kobe-Bryant-Shot-Selection" ><b>科比职业生涯投篮选择预测</b></a></p>
+            <p>由于科研需要用到机器学习方法，所以自学了一下，在网上找了一些数据集，练习了一下机器学习方法。</p>
             <ul>
-                <li>根据钢琴曲目表达的情感特点，选取了数首经典的钢琴曲作为实验研究对象，并完成了去噪、分帧等预处理。</li>
-                <li>创新地将动力学系统中的非线性分析手段引入到音乐信号的分析当中。</li>
-                <li>实验的成果已以论文的形式已被国家中文核心期刊录用，并作为后续科研工作的基础。</li>
+                <li>在Ubuntu系统下通过Anaconda搭建python开发环境。</li>
+                <li>对科比职业生涯投篮数据集进行整理，预先去除一些无关特征、冗余特征。</li>
+                <li>使用tensorflow框架搭建神经网络模型，反复调整神经网络结构、激活函数与学习率，进行训练与测试。</li>
+                <li>最终对科比生涯投篮选择预测的准确率达到 86%以上。</li>
             </ul>
         </div>
+
     </div>
     <div class="Info evaluation">
         <h2 class="mType">自我评价</h2>
