--- a/resume.html
+++ b/resume.html
@@ -282,7 +282,9 @@
             <p>本人为人诚恳、乐观向上，富有团队精神和竞争意识，拥有较强的组织能力和适应能力；
                 有较强的学习能力和执行力，积极参加院校各种活动；对新鲜事物保持好奇心，并且热衷思考与创新。
                 本人有良好的编程素养，熟悉图像处理方面知识算法。目前正在学习Web前端开发相关技术框架，
-                并将写的demo发布在个人<a href="https://github.com/BlackCarbo">GitHub</a>上，对学习实践Web前端技术抱有强烈的热情。</p>
+                并将写的demo发布在个人<a href="https://github.com/BlackCarbo">GitHub</a>上，
+                以及了解到的知识经验整理在<a href="https://blog.csdn.net/weixin_42029090">CSDN博客</a>上，
+                对学习实践Web前端技术抱有强烈的热情。</p>
         </div>
     </div>
 </div>
