--- a/resume.html
+++ b/resume.html
@@ -125,39 +125,34 @@
             animation-play-state: paused;
         }
         .cube{
-            opacity: 0.3;
+            opacity: 1;
             position: absolute;
-            outline: 3px solid #0af;
+            outline: 3px solid #0b628b;
             width: 100px;
             height: 100px;
-            color: #FFFFFF;
+            color: #0b628b;
+            background-color:rgba(255,255,255,0.4);
             display: flex;
             justify-content:center;
             align-items:Center;
             font-size: 20px;
         }
         .face1{
-            background-color: #0000ff;
             transform: translateZ(50px);
         }
         .face2{
-            background-color: #00FF00;
             transform: rotateY(180deg) translateZ(50px);
         }
         .face3{
-            background-color: #ff0000;
             transform: rotateY(90deg) translateZ(50px);
         }
         .face4{
-            background-color: #ff00ff;
             transform: rotateY(-90deg) translateZ(50px);
         }
         .face5{
-            background-color: #00ffff;
             transform: rotateX(90deg) translateZ(50px);
         }
         .face6{
-            background-color: #ffff00;
             transform: rotateX(-90deg) translateZ(50px);
         }
         @keyframes collcube{
@@ -274,7 +269,6 @@
                 <li>最终对科比生涯投篮选择预测的准确率达到 86%以上。</li>
             </ul>
         </div>
-
     </div>
     <div class="Info evaluation">
         <h2 class="mType">自我评价</h2>
