--- a/resume.html
+++ b/resume.html
@@ -227,11 +227,11 @@
         <h2 class="mType">技能特长</h2>
         <div>
             <p>->能使用Web前端技术(HTML/HTML5、CSS/CSS3、JavaScript/ES6)进行开发，
-                熟悉页面架构和布局，对表现与数据分离、Web语义化等有深刻理解。</p>
-            <p>->了解Bootstrap、JQuery等常用框架，了解Ajax运作机制，
+                熟悉页面架构和布局，对表现与数据分离、Web语义化等有一定理解。</p>
+            <p>->了解Vue、JQuery等常用框架，了解Ajax运作机制，了解Git用法，
                 对前端工程化与模块化开发有一定了解，有编码规范化意识。</p>
             <p>->熟悉java/python/C++开发等后台技术，对OOP思想有较深的理解并能熟练使用，熟悉MVC、MVVM设计模式。</p>
-            <p>->了解MySQL、SQL Server数据库，掌握SQL语句书写。</p>
+            <p>->了解MySQL、SQL Server数据库，熟悉SQL语句书写。</p>
             <p>->有一定算法基础，了解图像处理算法，能使用OpenCV库进行图像处理。</p>
             <p>->了解计算机网络通信方面知识原理。</p>
         </div>
@@ -240,12 +240,12 @@
         <h2 class="mType">科研项目</h2>
         <div>
             <p class="minTitle"><b>简单数据报表定制页面</b></p>
-            <p>该项目为百度前端技术学院的一个课程作业，整个任务可以大致分为几个模块：路由模块，表单模块，数据处理模块，表格模块，图表模块。</p>
+            <p>该项目为百度前端技术学院的一个课程作业，整个任务可以大致分为几个模块：表单模块，数据处理模块，表格模块，图表模块。</p>
             <ul>
                 <li>根据设计，通过HTML编写结合CSS实现基本页面结构布局。</li>
                 <li>编写动态生成表格以及柱状图和折线图的JS函数代码。</li>
                 <li>编写用户输入事件与逻辑，根据用户选择可刷新表单信息并以表格和图表形式展现数据。</li>
-                <li>加入表格内容修改与检查功能，若输入不是有效的数字数据则还原修改前数据。</li>
+                <li>加入表格内容修改与检查功能，若输入不是有效的数字则还原修改前数据。</li>
                 <li>使用localStorage实现将表单数据保存在本地，预先加载使用本地表单数据，以及删除本地相关表单数据功能。</li>
             </ul>
         </div>
@@ -260,7 +260,7 @@
             </ul>
         </div>
         <div>
-            <p class="minTitle"><a href="https://github.com/BlackCarbo/Kobe-Bryant-Shot-Selection" ><b>科比职业生涯投篮选择预测</b></a></p>
+            <p class="minTitle"><b>科比职业生涯投篮选择预测</b></p>
             <p>由于科研需要用到机器学习方法，所以自学了一下，在网上找了一些数据集，练习了一下机器学习方法。</p>
             <ul>
                 <li>在Ubuntu系统下通过Anaconda搭建python开发环境。</li>
