--- a/resume.html
+++ b/resume.html
@@ -76,12 +76,12 @@
             transform: rotateY(-180deg);
             backface-visibility: hidden;
         }
-        #card:hover .face{
-            transform: rotateY(180deg);
-        }
-        #card:hover .back{
-            transform: rotateY(0deg);
-        }
+        /*#card:hover .face{*/
+            /*transform: rotateY(180deg);*/
+        /*}*/
+        /*#card:hover .back{*/
+            /*transform: rotateY(0deg);*/
+        /*}*/
         .basic{
             margin: 20px 10px;
             padding-top: 200px;
@@ -103,7 +103,7 @@
             background-color: #236f93;
         }
         #mRight .Info{
-            margin:55px auto;
+            margin:50px auto;
         }
         #mRight h2{
             border-width: 0;
@@ -122,7 +122,8 @@
             width: 100px;
             height: 100px;
             animation: collcube 8s linear infinite;
-            animation-play-state: paused;
+            /*animation-play-state: paused;*/
+            animation-play-state: running;
         }
         .cube{
             opacity: 1;
@@ -226,10 +227,9 @@
     <div class="Info skills">
         <h2 class="mType">技能特长</h2>
         <div>
-            <p>->能使用Web前端技术(HTML/HTML5、CSS/CSS3、JavaScript/ES6)进行开发，
-                熟悉页面架构和布局，对表现与数据分离、Web语义化等有一定理解。</p>
-            <p>->了解Vue、JQuery等常用框架，了解Ajax运作机制，了解Git用法，
-                对前端工程化与模块化开发有一定了解，有编码规范化意识。</p>
+            <p>->能使用Web前端技术(HTML/HTML5、CSS/CSS3、JavaScript/Nodejs)进行开发，
+                了解ES6规范，熟悉页面架构和布局，对表现与数据分离、Web语义化有一定理解。</p>
+            <p>->了解Vue、JQuery等常用框架，了解Ajax运作机制，了解Git使用，对前端工程化与模块化开发有一定了解。</p>
             <p>->熟悉java/python/C++开发等后台技术，对OOP思想有较深的理解并能熟练使用，熟悉MVC、MVVM设计模式。</p>
             <p>->了解MySQL、SQL Server数据库，熟悉SQL语句书写。</p>
             <p>->有一定算法基础，了解图像处理算法，能使用OpenCV库进行图像处理。</p>
@@ -294,6 +294,8 @@
             <li>地址：浙江 杭州</li>
             <li>号码：159-5810-5948</li>
             <li>邮箱：mztjy@qq.com</li>
+            <li>GitHub：BlackCarbo</li>
+            <li>CSDN：weixin_42029090</li>
         </ul>
     </div>
     <div class="Info ability">
