--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,6 @@
         .minTitle{
             text-indent:0;
         }
-
         #mLeft,#mRight{
             display: inline-block;
             vertical-align: top;
@@ -239,6 +238,15 @@
     <div class="Info projects">
         <h2 class="mType">科研项目</h2>
         <div>
+            <p class="minTitle"><b>仿Steam官网主界面制作</b></p>
+            <p>该实践为模仿制作Steam官网主界面，实现基本的界面布局，以及相关的鼠标悬停点击事件。</p>
+            <ul>
+                <li>网页基本使用HTML、CSS代码还原了页面的布局定位。</li>
+                <li>使用原生JS代码实现了下拉列表显示、鼠标悬停点击相关事件等功能。</li>
+                <li>使用Ajax技术获取保存商品信息的json文件，并通过setInterval函数实现商品信息动态切换。</li>
+            </ul>
+        </div>
+        <div>
             <p class="minTitle"><b>简单数据报表定制页面</b></p>
             <p>该项目为百度前端技术学院的一个课程作业，整个任务可以大致分为几个模块：表单模块，数据处理模块，表格模块，图表模块。</p>
             <ul>
@@ -247,16 +255,6 @@
                 <li>编写用户输入事件与逻辑，根据用户选择可刷新表单信息并以表格和图表形式展现数据。</li>
                 <li>加入表格内容修改与检查功能，若输入不是有效的数字则还原修改前数据。</li>
                 <li>使用localStorage实现将表单数据保存在本地，预先加载使用本地表单数据，以及删除本地相关表单数据功能。</li>
-            </ul>
-        </div>
-        <div>
-            <p class="minTitle"><b>简单餐饮管理系统</b></p>
-            <p>该项目采用Java语言编写，基于MVC三层架构模式。系统包括人事管理、登录管理、报表统计和帮助等。</p>
-            <ul>
-                <li>在Windows操作系统下使用eclipse编程环境进行代码编写调试。</li>
-                <li>利用Java原生Swing组件来创建简单用户界面。</li>
-                <li>通过JDBC驱动与SQL Server数据库进行连接，完成基本的数据库操作。</li>
-                <li>最终系统实现了人员登陆验证、信息增删改查等功能。</li>
             </ul>
         </div>
         <div>
